sterlang/examples/pattern-error/inexhaustive_record0.erlt.warn.exp
-- WARNING --------------- examples/pattern-error/inexhaustive_record0.erlt:19:1
Missing Patterns
missing: #{a := true}
 19| test1(#(a = false)) -> {}.
...| ~~~~~~~~~~~~~~~~~~~~~~~~~
